<resources>
    <string name="app_name">News App</string>
    <string name="section">Section</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="published_date">Published Date</string>
    <string name="type">Type</string>
    <string name="error_msg">Something Went Wrong</string>
    <string name="no_internet">No Internet Available. Please check the same.</string>
</resources>