<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">
    <TextView
        android:id="@+id/section_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textStyle="italic"
        android:hint="@string/section"/>
    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:hint="@string/title"/>
    <TextView
        android:id="@+id/author_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/author"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/published_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/published_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
        <TextView
            android:id="@+id/type_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/type"
            android:layout_gravity="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</LinearLayout>